--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,13 @@
 .navbar-nav{
     background-color: black;
     margin-left: 150px;
-    
+    padding: 15px 40px 15px 20px;
+    border-radius: 30px;
 }
 
 .nav-link{
     color: white;
-    margin-left: 10px;
+    margin-left: 40px;
     font-weight: 400;
-    font-size: 22px;
+    font-size: 16px;
 }
