--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
 .navbar-nav{
     background-color: black;
     margin-left: 150px;
-    padding: 15px 40px 15px 20px;
+    padding: 15px 40px 15px 15px;
     border-radius: 30px;
 }
 
@@ -30,4 +30,13 @@
     margin-left: 40px;
     font-weight: 400;
     font-size: 16px;
+}
+.q4{
+background-image: linear-gradient(to right, #fbc531, #48dbfb);
+border-radius: 15px;
+padding: 8px 20px;
+}
+.q6{
+    padding-left: 20px;
+    padding-right: 20px;
 }
