--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,19 @@ padding: 8px 20px;
     padding-left: 20px;
     padding-right: 20px;
 }
+.d-flex{
+    background-color: black;
+    padding: 15px 40px;
+}
+.btn{
+    color: white;
+    font-weight: 400;
+    font-size: 18px;
+    margin-right: 13px;
+
+}
+.bi{
+    color: white;
+    
+    
+}
