--- a/css/style.css
+++ b/css/style.css
@@ -67,5 +67,14 @@ padding: 8px 20px;
     font-weight: 900;
 }
 .q11{
-    padding-top: 250px;
+    padding-top: 290px;
+}
+.w1{
+    background-color: black;
+    margin-top: 90px;
+}
+.w2{
+    color: white;
+    font-weight: 800;
+    font-size: 50px;
 }
