--- a/css/style.css
+++ b/css/style.css
@@ -76,5 +76,11 @@ padding: 8px 20px;
 .w2{
     color: white;
     font-weight: 800;
-    font-size: 50px;
+    font-size: 65px;
+    margin-left: 15px;
+    padding-top: 60px;
+}
+.w5{
+    margin-top: -500px;
+    margin-left: 40px;
 }
